# quill-v2

./: .gitignore  Cargo.toml  README.md
fcommon/: Cargo.toml
fcommon/src/: file_reader.rs  interning.rs  lib.rs  result.rs
feather/: Cargo.toml
feather/src/: db.rs  main.rs
fkernel/: Cargo.toml
fkernel/src/: lib.rs  test_db.rs  universe.rs
fkernel/src/expr/: free_vars.rs  mod.rs  nary_operations.rs  print.rs  traverse.rs
fkernel/src/inductive/: check.rs  check_intro_rule.rs  comp_rule.rs  mod.rs  recursor.rs  recursor_info.rs  squash_rule.rs  squash_type.rs
fkernel/src/typeck/: defeq.rs  env.rs  infer.rs  mod.rs  unfold.rs  whnf.rs
fkernel/src/universe/: mod.rs  succ.rs
fkernel_tests/: Cargo.toml  build.rs
fkernel_tests/tests/: certify.rs
fnodes/: Cargo.toml
fnodes/src/: basic_nodes.rs  definition.rs  deserialise.rs  expr.rs  expr2.rs  expr3.rs  expr_old.rs  inductive.rs  lib.rs  module.rs  node.rs  queries.rs  report.rs  s_expr.rs  serialise.rs  universe.rs
fnodes/src/test/: test.sexp
fnodes_macros/: Cargo.toml
fnodes_macros/src/: lib.rs
fvalue/: Cargo.toml
fvalue/src/: lib.rs  unification.rs  value.rs
qdb/: Cargo.toml
qdb/src/: lib.rs
qelab/: Cargo.toml
qelab/src/: lib.rs
qlsp/: Cargo.toml
qlsp/src/: diagnostic.rs  main.rs  range.rs  semantic_tokens.rs
qparse/: Cargo.toml
qparse/src/: lib.rs  parse.rs  pre_lex.rs
quill/: Cargo.toml
quill/src/: db.rs  main.rs
quill_vscode/: package-lock.json  package.json  quill-language-configuration.json
quill_vscode/client/: package-lock.json  package.json
quill_vscode/client/src/: extension.ts
spec/: compile.sh  design.tex  hott_macros.tex  hott_rules.tex  ideas.md  old.tex  refs.bib  spec.tex
spec/feather/: inductives.tex  types_and_values.tex
test/: test.quill  test.sexp
