[package]
name = "feather"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon", features = ["ariadne"] }
fnodes = { path = "../fnodes" }
notify = "4.0.17"
parking_lot = "0.12.0"
salsa = "0.16.1"

[features]
