[package]
name = "feather"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon", features = ["ariadne"] }
fnodes = { path = "../fnodes" }
fkernel = { path = "../fkernel" }
notify = "4.0.17"
salsa = "0.16.1"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["time", "ansi"] }
upcast = "0.1.0"

[features]
