[package]
name = "fnodes"
version = "0.0.0"
edition = "2021"

[dependencies]
ariadne = "0.1.3"
chumsky = "0.8.0"
fcommon = { version = "0.0.0", path = "../fcommon" }
lasso = { version = "0.6.0", features = ["multi-threaded"] }
salsa = "0.16.1"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
