[package]
name = "fnodes"
version = "0.0.0"
edition = "2021"

[dependencies]
chumsky = "0.8.0"
fcommon = { version = "0.0.0", path = "../fcommon" }
fnodes_macros = { version = "0.0.0", path = "../fnodes_macros" }
salsa = "0.16.1"
tracing = "0.1.31"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
