[package]
name = "qlsp"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon" }
fnodes = { version = "0.0.0", path = "../fnodes" }
lazy_static = "1.4.0"
lsp-server = "0.6.0"
lsp-types = "0.93.0"
qdb = { path = "../qdb" }
qparse = { path = "../qparse" }
salsa = "0.16.1"
serde = "1.0.138"
serde_json = "1.0.82"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
