[package]
name = "qlsp"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon" }
fnodes = { version = "0.0.0", path = "../fnodes" }
lazy_static = "1.4.0"
lsp-types = "0.93.0"
qdb = { path = "../qdb" }
qelab = { version = "0.0.0", path = "../qelab" }
qparse = { path = "../qparse" }
salsa = "0.16.1"
serde = "1.0.138"
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.17.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[features]
