[package]
name = "qparse"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon", features = ["ariadne"] }
fnodes = { path = "../fnodes" }
salsa = "0.16.1"
tracing = "0.1.35"
upcast = "0.1.0"
