[package]
name = "quill"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon" }
notify = "4.0.17"
qparse = { path = "../qparse" }
salsa = "0.16.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
